--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  03/28/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
+compiling ble_app.c...
+linking...
+Program Size: Code=98552 RO-data=8388 RW-data=904 ZI-data=2454004  
+FromELF: creating hex file...
 After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
@@ -295,7 +299,7 @@ Package Vendor: NXP
       Source file:   system_MIMXRT1052.c
       Include file:  system_MIMXRT1052.h
       Source file:   arm\startup_MIMXRT1052.s
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
