--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,18 +22,20 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 C:\Users\ningjw\Desktop\RT1052\rt1052.uvprojx
-Project File Date:  05/07/2020
+Project File Date:  05/13/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling adc_app.c...
-compiling ble_app.c...
+compiling norflash_app.c...
+User\src\norflash_app.c(49): warning:  #177-D: variable "status"  was declared but never referenced
+      status_t status;
+User\src\norflash_app.c: 1 warning, 0 errors
 linking...
-Program Size: Code=101708 RO-data=8668 RW-data=908 ZI-data=2942208  
+Program Size: Code=101752 RO-data=8664 RW-data=908 ZI-data=2938708  
 FromELF: creating hex file...
 After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
-".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -124,19 +126,19 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\semphr.h
       Include file:  Source\include\queue.h
+      Source file:   Source\list.c
       Source file:   Source\queue.c
+      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\tasks.c
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\task.h
-      Source file:   Source\list.c
+      Include file:  Source\include\semphr.h
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
       Include file:  Source\include\event_groups.h
@@ -154,19 +156,19 @@ Package Vendor: NXP
       Include file:  Source\include\stream_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Source file:   drivers\fsl_adc_etc.c
@@ -181,32 +183,32 @@ Package Vendor: NXP
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
-      Include file:  drivers\fsl_dcdc.h
       Source file:   drivers\fsl_dcdc.c
+      Include file:  drivers\fsl_dcdc.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
-      Source file:   drivers\fsl_flexspi.c
       Include file:  drivers\fsl_flexspi.h
+      Source file:   drivers\fsl_flexspi.c
 
    * Component: NXP::Device:SDK Drivers:gpc:2.1.0
-      Source file:   drivers\fsl_gpc.c
       Include file:  drivers\fsl_gpc.h
+      Source file:   drivers\fsl_gpc.c
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
       Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Include file:  drivers\fsl_gpt.h
       Source file:   drivers\fsl_gpt.c
+      Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
       Source file:   drivers\fsl_lpi2c.c
@@ -216,16 +218,16 @@ Package Vendor: NXP
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lpspi_edma:2.0.2
-      Include file:  drivers\fsl_lpspi_edma.h
       Source file:   drivers\fsl_lpspi_edma.c
+      Include file:  drivers\fsl_lpspi_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Include file:  drivers\fsl_lpuart.h
@@ -240,36 +242,36 @@ Package Vendor: NXP
       Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:pwm:2.0.0
-      Source file:   drivers\fsl_pwm.c
       Include file:  drivers\fsl_pwm.h
+      Source file:   drivers\fsl_pwm.c
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Source file:   drivers\fsl_usdhc.c
       Include file:  drivers\fsl_usdhc.h
+      Source file:   drivers\fsl_usdhc.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Source file:   drivers\fsl_snvs_hp.c
       Include file:  drivers\fsl_snvs_hp.h
+      Source file:   drivers\fsl_snvs_hp.c
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
       Include file:  drivers\fsl_snvs_lp.h
       Source file:   drivers\fsl_snvs_lp.c
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Include file:  drivers\fsl_src.h
       Source file:   drivers\fsl_src.c
+      Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Include file:  drivers\fsl_xbara.h
       Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
@@ -277,13 +279,13 @@ Package Vendor: NXP
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
       Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Include file:  utilities\str\fsl_str.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\debug_console\fsl_debug_console.h
+      Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
+      Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_manager.h
@@ -291,20 +293,20 @@ Package Vendor: NXP
       Source file:   components\serial_manager\serial_manager.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Source file:   components\serial_manager\serial_port_uart.c
       Include file:  components\serial_manager\serial_port_uart.h
+      Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Include file:  utilities\fsl_shell.h
       Source file:   utilities\fsl_shell.c
+      Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
       Include file:  fsl_device_registers.h
+      Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052_features.h
       Include file:  system_MIMXRT1052.h
-      Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052.h
+      Source file:   arm\startup_MIMXRT1052.s
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
